<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_child" />


    <androidx.cardview.widget.CardView

        android:id="@+id/card_view_roles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_6dp"
        android:layout_marginRight="@dimen/margin_6dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_10dp"
                android:paddingBottom="@dimen/margin_30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/badge"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/receive_a_verification_badge"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:fontFamily="@font/med"
                    android:text="@string/_1_enter_your_name_as_it_appears_on_your_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_id_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:layout_marginRight="@dimen/margin_6dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_stroke_edt_"
                        android:fontFamily="@font/regular"
                        android:hint="@string/first_name"
                        android:maxLines="1"
                        android:padding="@dimen/small_padding"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15sp" />

                    <EditText
                        android:id="@+id/edt_id_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_6dp"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_stroke_edt_"
                        android:fontFamily="@font/regular"
                        android:hint="@string/last_name"
                        android:maxLines="1"
                        android:padding="@dimen/small_padding"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_15sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:fontFamily="@font/med"
                    android:text="@string/upload_a_photo_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:fontFamily="@font/regular"
                    android:gravity="left"
                    android:text="@string/please_upload_a_scan_photo_of_your_passport"
                    android:textSize="@dimen/text_size_13sp" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:layout_marginRight="@dimen/margin_2dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/img_verified_or_not"
                        android:layout_width="200dp"
                        android:layout_height="130dp"
                        android:scaleType="fitXY"
                        android:src="@color/bg_color" />

                    <ImageView
                        android:id="@+id/img_check_uncheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:src="@drawable/check" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <FrameLayout
                        android:id="@+id/frame_photo_id_image"
                        android:layout_width="0dp"
                        android:layout_height="110dp"
                        android:layout_marginRight="@dimen/margin_4dp"
                        android:layout_weight="1"
                        android:background="@drawable/stroke_dotted_lines"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@color/trans_success_stroke_color"
                            android:fontFamily="@font/regular"
                            android:gravity="center"
                            android:text="@string/upload_photo_id"
                            android:textSize="@dimen/text_size_13sp" />

                    </FrameLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="110dp"
                        android:layout_marginLeft="@dimen/margin_4dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/img_photo_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@color/bg_color" />


                    </RelativeLayout>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/your_id_will_be_destroyed_from_our_servers_after_it_has_been_verified"
                    android:textSize="@dimen/text_size_13sp"
                    android:textStyle="italic" />


                <TextView
                    android:id="@+id/btn_submit_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:background="@drawable/square_solid_red"
                    android:fontFamily="@font/regular"
                    android:paddingLeft="@dimen/margin_16dp"
                    android:paddingRight="@dimen/margin_16dp"
                    android:text="@string/submit_verification"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>