<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_roles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_6dp"
        android:layout_marginTop="@dimen/margin_6dp"
        android:layout_marginRight="@dimen/margin_6dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_10dp"
                android:paddingBottom="@dimen/margin_30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/the_following_email_addresses_are_associated_with_your_account"
                        android:textSize="@dimen/text_size_13sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/med"
                    android:paddingTop="@dimen/margin_2dp"
                    android:paddingRight="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:paddingBottom="@dimen/margin_2dp"
                    android:text="Primary Email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray_d" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_divider"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_20dp"
                    android:paddingBottom="@dimen/margin_8dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_email_primary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp" />

                        <TextView
                            android:id="@+id/txt_verified"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/margin_8dp"
                            android:text=""
                            android:textColor="@color/green"
                            android:textSize="@dimen/text_size_13sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_resend_verifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:background="@drawable/solid_round_gray"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingLeft="@dimen/margin_10dp"
                        android:paddingTop="@dimen/margin_2dp"
                        android:paddingRight="@dimen/margin_10dp"
                        android:paddingBottom="@dimen/margin_2dp"
                        android:text="@string/re_send_verification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_13sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@font/med"
                    android:paddingTop="@dimen/margin_2dp"
                    android:paddingRight="@dimen/margin_10dp"
                    android:paddingBottom="@dimen/margin_2dp"
                    android:text="Other Associate Emails"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray_d" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/btn_add_another_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin_10dp"
                    android:paddingTop="@dimen/margin_4dp"
                    android:paddingRight="@dimen/margin_10dp"
                    android:fontFamily="@font/med"
                    android:paddingBottom="@dimen/margin_4dp"
                    android:text="@string/add_another_email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_15sp" />

                <EditText
                    android:id="@+id/edt_add_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:background="@drawable/square_stroke_edt_"
                    android:gravity="center_vertical"
                    android:hint="@string/add_another_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/padding_5sp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/btn_add_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:background="@drawable/square_solid_red"
                    android:paddingLeft="@dimen/margin_16dp"
                    android:paddingRight="@dimen/margin_16dp"
                    android:text="@string/add_email"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>